# zebot2

./: Cargo.toml  build.rs
handlers/: ask  bash  chat  duden  errno  factor  fortune  handler_lib.py  j  list  mundmische  nag  nextprime  ollama_config.py  prime  reval  rust  search  sig  ud  url
src/: client.rs  control.rs  lib.rs  main.rs  readerbuf.rs  util.rs
