[package]
name = "zebot2"
version = "0.1.0"
edition = "2021"
authors = [ "Marcus Borkenhagen <m AT fritschy DOT de>" ]

[dependencies]
irc2 = { git = "https://github.com/fritschy/zebot.git", package = "irc2" }
tokio = { version = "1", features = ["full"] }
clap = { version = "3.0.14", features = ["derive"] }
nom = "7.1.0"
tracing = "0.1.30"
tracing-subscriber = "0.3.8"
tokio-rustls = { version = "0.23.2" }
webpki-roots = { version = "0.22.2" }
regex = "1.5.4"
leaky-bucket-lite = { version = "0.5.1", features = ["tokio"], default-features = false }

# reqwest = { version = "0.11.9", features = ["rustls-tls"], default-features = false }
# xml-rs = "0.8.4"
# html5gum = "0.4.0"

[profile.release]
lto = true
