[package]
name = "zebot2"
version = "0.1.1"
edition = "2021"
authors = [ "Marcus Borkenhagen <m AT fritschy DOT de>" ]

[dependencies]
irc2 = { git = "https://github.com/fritschy/zebot.git", package = "irc2" }
tokio = { version = "1", default-features = false, features = ["rt", "io-std", "io-util", "net", "process", "macros", "fs"] }
clap = { version = "3.1", features = ["derive"] }
nom = { version = "7.1", features = [], default-features = false }
tracing = { version = "0.1", default-features = false, features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"]}
tokio-rustls = { version = "0.23", default-features = false }
webpki-roots = { version = "0.22" }
regex = "1.5"
leaky-bucket-lite = { version = "0.5", features = ["tokio"], default-features = false }
json = "0.12"
textwrap = { version = "0.15", features = [], default-features = false }
url = "2.2"
chrono = { version = "0.4", features = ["clock"], default-features = false }
nanorand = { version = "0.7", features = ["getrandom", "rdseed", "wyrand", "tls"], default-features = false }

# reqwest = { version = "0.11.9", features = ["rustls-tls"], default-features = false }
# xml-rs = "0.8.4"
# html5gum = "0.4.0"

[profile.release]
#lto = true
#codegen-units = 1
